Fix protocol version

--- a/action.yml
+++ b/action.yml
@@ -35,7 +35,7 @@ runs:
   steps:
     - name: Run the task
       id: start_task
-      run: echo ::set-output name=token::`curl -X POST -F firmware=@${{ inputs.binary }} -F input=@${{ inputs.uart-in }} -F config=@${{ inputs.vht-config }} "https://cloud.all-hw.com/ci/usertask?timeout=${{ inputs.timeout }}&key=${{ inputs.api-key }}" 2>/dev/null`
+      run: echo ::set-output name=token::`curl -X POST -F firmware=@${{ inputs.binary }} -F input=@${{ inputs.uart-in }} -F config=@${{ inputs.vht-config }} "https://cloud.all-hw.com/ci/usertask?version=V4&timeout=${{ inputs.timeout }}&key=${{ inputs.api-key }}" 2>/dev/null`
       shell: bash
     - name: Wait for remote task ends
       id: wait_for_result
